--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 #
 .utmp/
 FactoryBuilder/Assets/Materials/Preview.mat
-[Ll]ibrary
+[Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
@@ -98,3 +98,4 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+FactoryBuilder/UserSettings/Layouts/default-2022.dwlt
